[package]
name = "hermetic"
version = "0.1.0"
authors = ["Mitchell Ferree <mitchellferree@gmail.com>"]
edition = "2018"
license = "Unlicense"
description = "Python asyncio ORM in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hermetic"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8.4"
features = ["extension-module"]
